--- a/SystemExtensions/SystemExtensions.csproj
+++ b/SystemExtensions/SystemExtensions.csproj
@@ -9,13 +9,13 @@
 	</PropertyGroup>
 
 	<PropertyGroup Label="PackageInfo">
-		<Version>1.0.0</Version>
+		<Version>1.1.0</Version>
 		<Authors>aianlinb</Authors>
 		<Copyright>Copyright © 2024 aianlinb</Copyright>
 		<Description>Library with useful high-performance methods for Span/Stream/List etc...</Description>
 		<PackageId>$(Authors).$(AssemblyName)</PackageId>
 		<PackageProjectUrl>https://github.com/$(Authors)/$(AssemblyName)</PackageProjectUrl>
-		<PackageTags>Span;Stream;Memory;Extension;Performance;IO;System</PackageTags>
+		<PackageTags>$(AssemblyName);Span;Stream;Memory;Extension;Performance;IO;System</PackageTags>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<PackageLicenseFile>LICENSE</PackageLicenseFile>
 		<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
