Add RemoveRanges and AsReadOnlySpan to ValueList<T> Add Exception.GetNameAndMessage Add Index.GetOffset

--- a/SystemExtensions/SystemExtensions.csproj
+++ b/SystemExtensions/SystemExtensions.csproj
@@ -6,10 +6,11 @@
 		<Nullable>enable</Nullable>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 		<IsAotCompatible>true</IsAotCompatible>
+		<CheckForOverflowUnderflow Condition="'$(Configuration)' == 'Debug'">true</CheckForOverflowUnderflow>
 	</PropertyGroup>
 
 	<PropertyGroup Label="PackageInfo">
-		<Version>1.1.0</Version>
+		<Version>1.2.0</Version>
 		<Authors>aianlinb</Authors>
 		<Copyright>Copyright © 2024 aianlinb</Copyright>
 		<Description>Library with useful high-performance methods for Span/Stream/List etc...</Description>
