--- a/System.Private.CoreLib/System.Private.CoreLib.csproj
+++ b/System.Private.CoreLib/System.Private.CoreLib.csproj
@@ -5,6 +5,6 @@
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 		<AssemblyVersion>8.0.0.0</AssemblyVersion>
 		<ProduceOnlyReferenceAssembly>true</ProduceOnlyReferenceAssembly>
-		<NoWarn>CS0626</NoWarn>
+		<NoWarn>CS0626,CS8618</NoWarn>
 	</PropertyGroup>
 </Project>
