--- a/SystemExtensions/SystemExtensions.csproj
+++ b/SystemExtensions/SystemExtensions.csproj
@@ -10,10 +10,10 @@
 	</PropertyGroup>
 
 	<PropertyGroup Label="PackageInfo">
-		<Version>1.7.1</Version>
+		<Version>1.7.2</Version>
 		<Authors>aianlinb</Authors>
 		<Copyright>Copyright © 2024 aianlinb</Copyright>
-		<Description>Library with useful high-performance methods for Span/Stream/List etc...</Description>
+		<Description>Library with useful high-performance methods for Span/Stream/Enumerable etc...</Description>
 		<PackageId>$(Authors).$(AssemblyName)</PackageId>
 		<PackageProjectUrl>https://github.com/$(Authors)/$(AssemblyName)</PackageProjectUrl>
 		<PackageTags>$(AssemblyName);Span;Stream;Memory;Extension;Performance;IO;System</PackageTags>
