--- a/SystemExtensions/SystemExtensions.csproj
+++ b/SystemExtensions/SystemExtensions.csproj
@@ -10,9 +10,9 @@
 	</PropertyGroup>
 
 	<PropertyGroup Label="PackageInfo">
-		<Version>1.7.4</Version>
+		<Version>1.8.0</Version>
 		<Authors>aianlinb</Authors>
-		<Copyright>Copyright © 2024 aianlinb</Copyright>
+		<Copyright>Copyright © 2024-2025 aianlinb</Copyright>
 		<Description>Library with useful high-performance methods for Span/Stream/Enumerable etc...</Description>
 		<PackageId>$(Authors).$(AssemblyName)</PackageId>
 		<PackageProjectUrl>https://github.com/$(Authors)/$(AssemblyName)</PackageProjectUrl>
